--- a/style.css
+++ b/style.css
@@ -251,7 +251,7 @@
 .img15{
 	z-index: -1;
 	position: absolute;
-	margin-top: -6vh;
+	margin-top: -3vh;
 	margin-left:10vh;
 }
 .img16{
@@ -299,6 +299,17 @@ p{
 	letter-spacing: 2px;
 	z-index: 1;
 	text-align: left;
+}
+.style4{
+	margin-top: 40vh;
+	margin-left: 10vh;
+	width: 135vh;
+	color:white;
+	font-size: 25px;
+	line-height: 40px;
+	letter-spacing: -0.5px;
+	z-index: 2;
+	text-align: center;
 }
 .img6{
 	margin-top: 16vh;
